fix alignment

--- a/index.css
+++ b/index.css
@@ -125,10 +125,6 @@ a:hover {
   color: #535bf2;
 }
 
-h1 {
-  text-align: center;
-}
-
 img {
   width: 100%;
   height: 100%;
@@ -248,11 +244,11 @@ button:active {
 
 .post_tile {
   min-width: 90%;
-  text-align: center;
   margin: var(--primary-margin);
   padding: var(--primary-padding);
   background-color: var(--primary);
   border-radius: var(--primary-border-radius);
+  padding-left: 2rem;
 }
 
 .post_tile div {
@@ -310,12 +306,6 @@ button:active {
 
   #reading_content img {
     height: 25vh !important;
-  }
-  #end_containers {
-    flex-direction: column !important;
-  }
-  #end_containers > div {
-    width: 100% !important;
   }
 
   /* new layout here */
@@ -458,21 +448,23 @@ td {
 
 .tr_div,
 .tr_div_2 {
-  margin: 1rem;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
   font-size: small;
   color: rgba(255, 255, 255, 0.75);
 }
 
 .tr_div * {
-  padding: 0.2rem;
-  margin-right: 0.5rem;
-  border-radius: 12px;
+  padding: var(--primary-padding);
+  margin-right: var(--primary-margin);
+  border-radius: var(--primary-border-radius);
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .tr_div_2 * {
-  padding: 0.2rem;
-  margin-right: 0.5rem;
+  padding: var(--primary-padding);
+  margin-right: var(--primary-margin);
 }
 
 /* _________________________ Animations _________________________ */
